bs-spacing project added and card button style issue fixed

--- a/components/portfolio.module.scss
+++ b/components/portfolio.module.scss
@@ -128,6 +128,27 @@
             font-size: $font-size-sm;
             padding: 5px;
             margin-right: 10px;
+
+            font-family: $font-secondary;
+            border: 2px solid $color-primary;
+            background: $color-primary;
+            color: $on-color-primary;
+            outline: none;
+            font-size: $font-size-base;
+            font-weight: $font-weight-normal;
+            border-radius: 6px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+
+            &:hover {
+              background: $on-color-primary;
+              color: $color-primary;
+            }
+
+            &:active {
+              background: lighten($color: $color-primary, $amount: 40%);
+              color: $color-primary;
+            }
           }
         }
       }
